--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,6 +57,20 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
+      - name: Debug secrets availability
+        run: |
+          echo "Username length: ${#USERNAME}"
+          echo "Token length: ${#TOKEN}"
+          if [ -z "$USERNAME" ]; then
+            echo "ERROR: DOCKERHUB_USERNAME is not set!"
+          fi
+          if [ -z "$TOKEN" ]; then
+            echo "ERROR: DOCKERHUB_TOKEN is not set!"
+          fi
+        env:
+          USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
